--- a/SwiftStock(Redo)/Pages/Cashier.cshtml
+++ b/SwiftStock(Redo)/Pages/Cashier.cshtml
@@ -104,7 +104,7 @@
 <body class="bg-gray-100">
     <header class="bg-[#E31837] text-white p-4 flex justify-between items-center">
         <div class="flex items-center">
-            <img src="/images/alfamart-logo.png" alt="SwiftStock" class="h-8 mr-2">
+             <img src="~/css/Images/SwiftLogo.png" alt="Logo"  class="h-8 mr-2">
             <span class="text-2xl font-bold">SwiftStock POS</span>
         </div>
         <div class="flex items-center space-x-4">
