--- a/SwiftStock(Redo)/Pages/Home.cshtml
+++ b/SwiftStock(Redo)/Pages/Home.cshtml
@@ -12,7 +12,7 @@
         
         <!-- Search Bar -->
         <div class="relative w-96">
-            <i class="material-icons absolute left-4 top-3 text-slate-400">search</i>
+             <i class="material-icons absolute left-4 top-3 text-slate-400"></i>
             <input type="text" 
                    id="product-search"
                    placeholder="Search products..."
