--- a/SwiftStock(Redo)/Pages/Shared/_AdminLayout.cshtml
+++ b/SwiftStock(Redo)/Pages/Shared/_AdminLayout.cshtml
@@ -178,7 +178,7 @@
         <div class="p-6 border-b border-slate-800">
             <div class="flex items-center justify-between">
                 <div class="flex items-center space-x-3">
-                    <img src="/images/alfamart-logo.png" alt="SwiftStock" class="h-8">
+                       <img src="~/css/Images/SwiftLogo.png" alt="Logo" class="h-8 w-auto">
                     <span class="text-xl font-bold text-white sidebar-text logo-text">SwiftStock</span>
                 </div>
                 <button id="toggle-sidebar" class="text-slate-400 hover:text-white">
